--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="flex flex-col items-center">
           <div>
             <label for="color"
-              ><span class="hidden md:inline-flex">Choisissez la </span> Ville
+              ><span class="hidden md:inline-flex">Saisir une </span> Ville
               :</label
             >
             <input
@@ -90,9 +90,20 @@
         <h3 class=" text-4xl font-semibold text-orange-500">
           Bienvenue
         </h3>
-        <h4 class="text-2xl font-semibold text-gray-800">
-          Choisissez une ville
+        <h4 class="text-xl mt-4 font-semibold text-gray-800">
+          Choisissez une ville, dans
+          <span class="font-bold">le monde entier</span>, pour obtenir la météo
+          sur 3 jours
         </h4>
+        <div
+          class="flex flex-row mt-10 p-2 w-full items-center justify around bg-gray-400"
+        >
+          <img src="src/img/10d.png" alt="meteo" class="w-1/5" />
+          <img src="src/img/13d.png" alt="meteo" class="w-1/5" />
+          <img src="src/img/01d.png" alt="meteo" class="w-1/5" />
+          <img src="src/img/11d.png" alt="meteo" class="w-1/5" />
+          <img src="src/img/09n.png" alt="meteo" class="w-1/5" />
+        </div>
       </div>
     </div>
 
