--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <h1 class="hidden md:block mx-4 text-lg font-semibold">Météo</h1>
       </div>
 
-      <div class="flex flex-row items-center justify-end">
+      <div class="flex flex-row items-center">
         <div class="flex flex-col items-center">
           <div>
-            <label for="color"
-              ><span class="hidden md:inline-flex">Saisir une </span> Ville
+            <label for="color" class="hidden md:inline-flex"
+              ><span class="hidden lg:inline-flex mr-1">Saisir une </span> Ville
               :</label
             >
             <input
@@ -52,7 +52,7 @@
             />
           </div>
           <p id="error" class="mt-2 text-white text-xs font-normal hidden">
-            Ville non valide, veuillez ressaisir
+            Ville non valide, veuillez vérifier l'orthographe
           </p>
         </div>
         <!--<form class="mx-4 md:mx-6">
